--- a/VistasDeMódulos/MóduloAdminstración/CrearUsuario.resx
+++ b/VistasDeMódulos/MóduloAdminstración/CrearUsuario.resx
@@ -147,4 +147,7 @@
         /AVHn/PRqmaOmgAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="textBoxCargo.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
 </root>
