--- a/VistasDeMódulos/móduloPlatos/submóduloPlatoDeComida/RegistrarActualizarPlatoscs.resx
+++ b/VistasDeMódulos/móduloPlatos/submóduloPlatoDeComida/RegistrarActualizarPlatoscs.resx
@@ -170,7 +170,7 @@
         DXhMsoK///ofyoZpEJqxYHgAAAAASUVORK5CYII=
 </value>
   </data>
-  <metadata name="idOkay.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="idOk.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <metadata name="nombreIngredienteOk.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
